[gd_scene load_steps=28 format=2]

[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)11.png" type="Texture" id=1]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)17.png" type="Texture" id=2]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)1.png" type="Texture" id=3]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)7.png" type="Texture" id=4]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)4.png" type="Texture" id=5]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)19.png" type="Texture" id=6]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)3.png" type="Texture" id=7]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)22.png" type="Texture" id=8]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)6.png" type="Texture" id=9]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)9.png" type="Texture" id=10]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)21.png" type="Texture" id=11]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)14.png" type="Texture" id=12]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)18.png" type="Texture" id=13]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)12.png" type="Texture" id=14]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)5.png" type="Texture" id=15]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)2.png" type="Texture" id=16]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)16.png" type="Texture" id=17]
[ext_resource path="res://assetpack/ADEPT_EVIL(STAN).png" type="Texture" id=18]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)10.png" type="Texture" id=19]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)15.png" type="Texture" id=20]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)13.png" type="Texture" id=21]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)8.png" type="Texture" id=22]
[ext_resource path="res://assetpack/ADEPT_EVIL(DEATH)/ADEPT_EVIL(DEATH)20.png" type="Texture" id=23]
[ext_resource path="res://Mobs_1.gd" type="Script" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.5, 38 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 22 ), ExtResource( 10 ), ExtResource( 19 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "Death",
"speed": 15.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 151.5, 66.75 )

[node name="ADEPT_EVIL" type="KinematicBody2D"]
script = ExtResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 3 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Death"

[node name="RayCastR" type="RayCast2D" parent="."]
position = Vector2( 23, 39 )
enabled = true
cast_to = Vector2( 0, 17 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.407843, 0, 1, 1 )
position = Vector2( -0.5, 0.25 )
shape = SubResource( 3 )

[node name="RayCastL" type="RayCast2D" parent="."]
position = Vector2( -27, 38 )
enabled = true
cast_to = Vector2( 0, 17 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
